--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:name="com.example.dexloadtest.DexLoadApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:debuggable="true">
         <!--  <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
