--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,14 +6,14 @@
 
     <uses-sdk
         android:minSdkVersion="7"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="15" />
 
     <application
         android:allowBackup="true"
         android:name="com.example.dexloadtest.DexLoadApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:debuggable="true">
         <!--  <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -25,7 +25,7 @@
         </activity>
         -->
         
-        <activity android:label="@string/title_activity_main" android:name="com.droider.crackme2010.MainActivity">
+        <activity android:label="@string/title_activity_main" android:name="com.droider.crackme0201.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
